		* Fixed configure of libpng when sh != bash

	GonoszTopi:
		* Allow any kind of file links in collections
		* Make UPnP log go to the appropriate category (#1681)
		* Use the C++ compiler to check for features we're about to use
		  in C++ source files (#1572)
		* Adapt configure to handle subversion repository clones in
		  mercurial and git
		* Fix bfd detection for systems missing -liberty

	iz0bbz:
		* Fix WinSock library version detection with MinGW-w64
		* Fix compilation with MinGW-w64

	kam:
		* WebServer serves .json, .manifest and .appacache files

	Mr Hyde:
		* Fix "Disable computer's timed standby mode" for MacOS 10.9 Mavericks
		* Compilation fix on Linux Slackware 64bit and MacOS 10.9.4
		* Fix configure on Mac

	Stu Redman:
		* Display hashing progress in progress bars
		* Assertion from background thread now prints a message and not just closes the app
		* Backtrace (crash or assertion) is written to logfile
		* Fix: disabling protocol obfuscation broke Kad and triggered assertions
		* Fixed "Prompt on exit" preference
		* Fixed country flags for Turkish localization
		* Fixed loading of zipped IP filter (#1674)
		* Fixed showing of shared files to other clients
		* Fixed assertions in CFormat("%p") on 64 bit OS with wx 2.9
		* Boost Asio can now be used as networking layer instead of wxWidgets
		* Fixed memory leak when AICH hashing already known files
		* New download links for server list and nodes.dat (with gav616 and xosevp)
		* Projects for Visual Studio 2013 (which is now the preferred Win32 compiler)
		* Fixed build with wx 3.0 (including STL build)

--------------------------------------------------------------------------------

Version 2.3.1 - The "unobvious evil date" version.
----------
2011-11-11

	btkaos:
		* Show if a client shares its file list in client view

	freddy77:
		* Various optimizations of memory usage
		* Access files for reading/writing via mapped memory
		  (with custom exception handling)